applications/example-app-spiffe-csi/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-csi-app
  namespace: sandbox
spec:
  podSelector:
    matchLabels:
      app: my-csi-app
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
